# nix-home-fs

./: Cargo.toml  LICENSE  README.md
src/: main.rs
